# System-Software-lab6

./: CMakeLists.txt  client.c  client.h  fileinfo.c  fileinfo.h  main.c  main.h  overal_functions.c  overal_functions.h
